[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Network-Builder"
version = "0.0.1"
authors = [
  { name="Levy-Y", email="21.hagymasi.levente.gyula@mechwart.com" },
]
description = "Infrastructure as code network builder"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Levy-Y/Network-Builder/"
Issues = "https://github.com/Levy-Y/Network-Builder/issues"